<resources>
    <string name="app_name">VehicleControlSystem</string>

    <string name="account">请输入手机号码</string>
    <string name="password">请输入登录密码</string>
    <string name="verification_code">请输入验证码</string>
    <string name="log">登录</string>
    <string name="forget_password">下一步</string>

    <string name="number_not_empty">手机号不能为空</string>
    <string name="password_not_empty">密码不能为空</string>

    <string name="loading_tip">Loading</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="tip">提示</string>
    <color name="font_cancel">#777575</color>

    <string name="complete">完成</string>

    <string name="title_activity_modify">ModifyActivity</string>

    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>

</resources>
