<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_background">

    <ImageView
        android:padding="10dp"
        android:id="@+id/forget_password_img_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_return"
        android:layout_marginTop="43dp"
        android:layout_marginLeft="18dp"/>

    <ImageView
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:src="@drawable/lon_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="94dp"/>

    <FrameLayout
        android:layout_marginTop="247dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tv_input_box_style">
            <EditText
                android:inputType="text"
                style="@style/MyEditText"
                android:id="@+id/forget_password_et_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:textColorHint="#ffffff"
                android:hint="@string/account"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@null"
                android:layout_marginLeft="42dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/log_et_phone"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="19dp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:id="@+id/forget_password_img_delete_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/log_et_delete"
                android:layout_gravity="center|right"
                android:layout_marginRight="25dp"
                android:visibility="gone"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tv_input_box_style"
            android:layout_marginTop="70dp">
            <EditText
                style="@style/MyEditText"
                android:id="@+id/forget_password_et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/verification_code"
                android:textColorHint="#ffffff"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@null"
                android:layout_marginLeft="42dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/verification_code"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="19dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/forget_password_tv_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="获取验证码"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:layout_gravity="center|right"
                android:layout_marginRight="22dp" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="417dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/forget_password_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/forget_password"
        android:textColor="#038af9"
        android:background="@drawable/bt_background_style"/>
    </FrameLayout>


</FrameLayout>